--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -7,6 +7,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
   <link rel="icon" type="image/x-icon" href="favicon.ico">  
+  <script src="https://unpkg.com/jspdf@1.3.3/dist/jspdf.min.js"></script>
+  <script src="https://unpkg.com/jspdf-autotable@2.3.1/dist/jspdf.plugin.autotable.js"></script>
 </head>
 <body>
   <app-root></app-root>
